fix Icons in chat and profile/about, fix invisible checkbox, added password display to login & register

--- a/src/styles/bootstrap.css
+++ b/src/styles/bootstrap.css
@@ -2533,9 +2533,9 @@ textarea.form-control-lg {
   background-position: center;
   background-size: contain;
   border: 1px solid rgba(0, 0, 0, 0.25);
-  -webkit-appearance: none;
+  /* -webkit-appearance: none;
   -moz-appearance: none;
-  appearance: none;
+  appearance: none; */
   -webkit-print-color-adjust: exact;
   color-adjust: exact;
 }
@@ -3037,8 +3037,8 @@ textarea.form-control.is-invalid {
   box-shadow: 0 0 0 0.25rem rgba(220, 53, 69, 0.25);
 }
 
-
-.was-validated .form-check-input:invalid, .form-check-input-reverse:valid,
+.was-validated .form-check-input:invalid,
+.form-check-input-reverse:valid,
 .form-check-input.is-invalid {
   border-color: #dc3545;
 }
@@ -7453,7 +7453,7 @@ fieldset:disabled .btn {
   align-items: center !important;
 }
 
-@media(max-width: 500px){
+@media (max-width: 500px) {
   .align-items-center {
     font-size: small;
     margin-top: 0.5rem;
@@ -7958,8 +7958,8 @@ fieldset:disabled .btn {
   font-size: calc(1.275rem + 0.3vw) !important;
 }
 
-@media screen and (max-width: 500px){
-  .fs-4{
+@media screen and (max-width: 500px) {
+  .fs-4 {
     font-size: smaller;
   }
 }
@@ -8028,8 +8028,8 @@ fieldset:disabled .btn {
   text-align: center !important;
 }
 
-@media(max-width: 500px){
-  .text-center{
+@media (max-width: 500px) {
+  .text-center {
     font-size: small;
   }
 }
@@ -8078,46 +8078,49 @@ fieldset:disabled .btn {
   color: #0b5351 !important;
 }
 
-@media (max-width: 1000px){
-   .text-mute{
+@media (max-width: 1000px) {
+  .text-mute {
     margin-left: 1.5rem;
   }
 }
 
-@media (max-width: 600px){
-  .text-mute{
-   margin-left: -4rem;
- }
+@media (max-width: 600px) {
+  .text-mute {
+    margin-left: -4rem;
+  }
 }
 
-@media (max-width: 500px){
-  .text-primary, .text-muted{
+@media (max-width: 500px) {
+  .text-primary,
+  .text-muted {
     font-size: small;
     margin-left: -1rem;
   }
 }
 
-@media (max-width: 500px){
-  .text-mute{
+@media (max-width: 500px) {
+  .text-mute {
     font-size: small;
     margin-left: -2rem;
   }
 }
 
-@media (max-width: 300px){
-  .text-primary, .text-muted, .text-mute{
+@media (max-width: 300px) {
+  .text-primary,
+  .text-muted,
+  .text-mute {
     font-size: xx-small;
   }
 }
 
-@media (max-width: 300px){
-  .text-mute{
+@media (max-width: 300px) {
+  .text-mute {
     margin-left: 0;
   }
 }
 
-@media(max-width: 500px){
-  .pic{
+@media (max-width: 500px) {
+  .pic {
     width: 70px;
     height: 70px;
   }
